# FootballManus

./: .gitignore  ARCHITECTURE.md  DATA_SOURCES.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_INDEX.md  GAME_DESIGN.md  PROJECT_STATUS.md  README.md  plan.md  pyproject.toml  test_enhanced_engine.py  test_multistep_search.py
alembic/versions/: 001_add_personalized_development.py
config/: config.toml  config_example.toml  llm_config.local.yaml  llm_config.yaml
data/: FM24_IMPORT_STATUS.md  README_DATA.md  README_TRANSFERMARKET.md  download_football_data.py  export_players.py  fm_manager_full.db  import_fm_chinese_data.py  import_football_data.py  import_from_transfermarkt.py  players_top100.json  teams.csv  transfermarkt_converter.py  transfermarkt_converter_fixed.py
data/season_results/: SEASON_SUMMARY.md
doc/: AI_MANAGER.md  ARCHITECTURE_BACKEND.md  CUP_COMPETITION.md  DYNAMIC_STATE.md  FAN_BOARD_SYSTEM.md  FINANCE_SYSTEM.md  GAME_FLOW_DESIGN.md  IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION.md  MATCH_ENGINE.md  MATCH_SIMULATION_ANALYSIS.md  NARRATIVE_SYSTEM.md  NEWS_SYSTEM.md  PERSONALIZED_DEVELOPMENT_QUICKSTART.md  PERSONALIZED_PLAYER_DEVELOPMENT.md  SEASON_SIMULATION.md  TRANSFER_SYSTEM.md  YOUTH_SYSTEM.md
docs/: FM24_IMPORT_GUIDE.md  MULTIPLAYER.md  MULTI_POSITION_SYSTEM.md
fm_manager/: config.py  config_toml.py
fm_manager/ai/: command_executor.py  intent_parser.py  llm_manager.py  llm_tool_interface.py
fm_manager/cli/: client.py  main.py
fm_manager/core/: __init__.py  config.py  database.py  game_save.py  save_load.py  save_load_enhanced.py
fm_manager/data/: __init__.py  cleaned_data_loader.py  compact_fifa_dataset.py  fetcher.py  fifa_importer.py  fm_importer.py  generators.py  importer.py  transfermarkt_scraper.py
fm_manager/engine/: ai_manager.py  ai_manager_lightweight.py  calendar.py  cup_competition_engine.py  domestic_cup_engine.py  european_competition_engine.py  fan_board_system.py  finance_engine.py  injury_chemistry_engine.py  llm_client.py  match_engine.py  match_engine_adapter.py  match_engine_markov.py  match_engine_markov_v2.py  match_rating.py  (+20 more)
scripts/: demo_match.py  demo_match_simulation.py  demo_tool_calling.py  game_client.py  game_client_textual.py  import_compact_data.py  import_fm24_chinese.py  init_db.py  merge_fm24_data.py  merge_fm24_final.py  nl_game_client.py  rebuild_cleaned_data.py  save_manager_cli.py  show_player_attributes.py  show_season_story.py  simple_game_loop.py  simulate_cup_competition.py  simulate_markov_season.py  simulate_player_development.py  simulate_premier_league_season.py  simulate_season.py  start_server.py  test_agent_integration.py  test_core_systems.py  test_integration.py  test_llm_api_connection.py  test_llm_integration.py  test_llm_manager.py  test_llm_manager_yaml.py  test_llm_transfer_advanced.py  test_llm_transfer_decision.py  test_markov_engine.py  test_match_engine.py  test_match_engine_v2.py  test_multiplayer.py  test_phase4_systems.py  test_rotation_season.py  test_v3_leagues.py  test_yaml_config.py  use_imported_data.py
tests/: test_cup_competition.py  test_player_development.py
(+21 files in other folders)
