[project]
name = "fm-manager"
version = "0.1.0"
description = "A CLI-based football manager simulation game with LLM integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
keywords = ["football", "manager", "simulation", "cli", "llm", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    
    # CLI & UI
    "rich>=13.9.0",
    "textual>=0.85.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.48",
    "wcwidth>=0.2.13",
    
    # HTTP Client
    "httpx>=0.27.0",
    "aiohttp>=3.11.0",
    
    # LLM Integration
    "openai>=1.55.0",
    "tiktoken>=0.8.0",
    
    # Data Processing
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    
    # Utilities
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    
    # Scheduling
    "apscheduler>=3.11.0",
    
    # Web Scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "fake-useragent>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
fm-server = "fm_manager.server.main:main"
fm-cli = "fm_manager.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["fm_manager"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
